<?xml version="1.0"?>
<package format="2">
  <name>smach_ros</name>
  <version>2.0.0</version>
  <description>
    Extensions for the SMACH library to integrate it tightly with ROS. For
    example, SMACH-ROS can call ROS services, listen to ROS topics, and
    integrate with <a href="http://www.ros.org/wiki/actionlib">actionlib</a>
    both as a client, and a provider of action servers.  SMACH is a new 
    library that takes advantage of very old concepts in order to quickly
    create robust robot behavior with maintainable and modular code.
  </description>

  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>
  <license>BSD</license>

  <author>Jonathan Bohren</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rostest</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <exec_depend>smach</exec_depend>
  <exec_depend>smach_msgs</exec_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rostopic</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>

  <build_export_depend>smach</build_export_depend>
  <build_export_depend>smach_msgs</build_export_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
